fixed overflow when creating a new instructor on admin home page. Updated test on AdminHomePageUiTest.java to account for changed message in results table. Added a test in AdminHomePageUiTest.java to check that actual join link matches expected join link

--- a/src/main/webapp/stylesheets/teammatesCommon.css
+++ b/src/main/webapp/stylesheets/teammatesCommon.css
@@ -114,10 +114,6 @@ Apply to alert to override Bootstrap's default 3d alerts
     color: #E46D0B;
 }
 
-.color_light_orange {
-    color: #FFA100;
-}
-
 .color_blue {
     color: #4379D1;
 }
